--- a/composer.json
+++ b/composer.json
@@ -18,22 +18,22 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=7.1| ^8.0",
-    "symfony/console": "^2.7|^3.0|^4.0|^5.0",
-    "symfony/dependency-injection": "^2.2|^3.0|^4.0|^5.0",
-    "symfony/yaml": "^2.2|^3.0|^4.0|^5.0",
-    "symfony/config": "^2.2|^3.0|^4.0|^5.0",
+    "php": ">=7.3",
+    "symfony/console": "^2.7|^3.0|^4.0|^5.0|^6.0",
+    "symfony/dependency-injection": "^2.2|^3.0|^4.0|^5.0|^6.0",
+    "symfony/yaml": "^2.2|^3.0|^4.0|^5.0|^6.0",
+    "symfony/config": "^2.2|^3.0|^4.0|^5.0|^6.0",
     "goetas-webservices/xsd-reader": "^0.3.7",
     "doctrine/inflector": "^1.0",
     "laminas/laminas-code": "^4.5.1",
-
     "psr/log": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.0",
+    "phpunit/phpunit": "^9.0",
     "jms/serializer": "^1.9|^2.0|^3.0",
     "goetas-webservices/xsd2php-runtime": "^0.2.13@dev",
-    "symfony/validator": "^2.3.24|^3.0|^4.0"
+    "symfony/validator": "^2.3.24|^3.0|^4.0|^5.0|^6.0",
+    "dms/phpunit-arraysubset-asserts": "^0.3.1"
   },
   "autoload": {
     "psr-4": {
